--- a/login.html
+++ b/login.html
@@ -4,10 +4,9 @@
         </head>
             <body>
                 <form action="" method="post">
-                <input type="text" name="email" placeholder="password">
-                <input type="password" name="password" placeholder="password">
-                <button type="submit">Submit</button>
-            </form>
+                    <input type="text" name="email" placeholder="password">
+                    <input type="password" name="password" placeholder="password">
+                    <button type="submit">Add</button>
+                </form>
             </body>
-
 </html>
