--- a/login.html
+++ b/login.html
@@ -1,12 +1,11 @@
-<html>
-        <head>
-            <title>login</title>
-        </head>
-            <body>
-                <form action="" method="post">
-                    <input type="text" name="email" placeholder="password">
-                    <input type="password" name="password" placeholder="password">
-                    <button type="submit">Add</button>
-                </form>
-            </body>
-</html>
+<html> 
+<body> 
+    
+    <form action = "/login" method = "POST"> 
+        <p><h3>Enter userID</h3></p> 
+        <p><input type = 'text' name = 'username'/></p> 
+        <p><input type = 'submit' value = 'Login'/></p> 
+    </form> 
+        
+</body> 
+</html> 
